fix filter alignment

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -266,8 +266,8 @@ button {
   }
 }
 
-.dashboard-stats td, th {
-  padding: 10px 60px;
+.dashboard-stats {
+  padding: 15px;
 }
 
 .run-tag {
